[gd_scene load_steps=5 format=3 uid="uid://v8rnxmm8lgeg"]

[ext_resource type="Script" path="res://scripts/cargo_minigame.gd" id="1_cif4l"]
[ext_resource type="Texture2D" uid="uid://baywevq16ktxf" path="res://sprites/cargo_minigame/single.png" id="2_28ytq"]
[ext_resource type="Texture2D" uid="uid://b375bmw8vtulg" path="res://sprites/cargo_minigame/board.png" id="2_fq3ex"]
[ext_resource type="Texture2D" uid="uid://dekwytxfn2cfw" path="res://sprites/cargo_minigame/spawn_pool.png" id="3_qt8uq"]

[node name="cargo_minigame" type="Node2D"]
script = ExtResource("1_cif4l")

[node name="board" type="Sprite2D" parent="."]
position = Vector2(440, 480)
texture = ExtResource("2_fq3ex")

[node name="spawn_pool" type="Sprite2D" parent="."]
position = Vector2(1380, 530)
texture = ExtResource("3_qt8uq")

[node name="Button" type="Button" parent="."]
light_mask = 0
visibility_layer = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Single" type="Sprite2D" parent="."]
position = Vector2(-254, 78)
texture = ExtResource("2_28ytq")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
